[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OttomanAgentAssets"
version = "0.2.0"
description = "Reusable tools for building AI agents — comms I/O, vector search, and memory."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pinecone = ["pinecone>=5.0.0"]
gmail = [
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["comms*", "agent_tools*"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
